[nan-578] add social buttons

--- a/packages/webapp/src/index.css
+++ b/packages/webapp/src/index.css
@@ -3,7 +3,7 @@ body,
 #root {
     width: 100%;
     height: 100%;
-    background-color: #0e1014;
+    background-color: #010101;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400;500;600;700&display=swap');
