[nan-749] defualt to nested

--- a/packages/cli/lib/templates/github.sync.ejs
+++ b/packages/cli/lib/templates/github.sync.ejs
@@ -1,4 +1,4 @@
-import type { NangoSync, GithubIssue } from './models';
+import type { NangoSync, GithubIssue } from '<%= interfacePath %><%= interfaceFileName %>';
 
 const LIMIT = 100;
 
