--- a/packages/cli/lib/templates/action.ejs
+++ b/packages/cli/lib/templates/action.ejs
@@ -43,7 +43,7 @@
         }
     }
 %>
-import type { NangoAction<%= formattedInterfaceNames ? ', ' + formattedInterfaceNames : '' %><%= formattedInputs ? ', ' + formattedInputs : '' %> } from './<%= interfaceFileName %>';
+import type { NangoAction<%= formattedInterfaceNames ? ', ' + formattedInterfaceNames : '' %><%= formattedInputs ? ', ' + formattedInputs : '' %> } from '<%= interfacePath %><%= interfaceFileName %>';
 
 export default async function runAction(nango: NangoAction<%= inputs ? ', input' + optionalInput + ': ' + paramInputs : '' %>): Promise<<%= returnTypes %>> {
     // Integration code goes here
