--- a/packages/cli/lib/templates/post-connection.ejs
+++ b/packages/cli/lib/templates/post-connection.ejs
@@ -1,4 +1,4 @@
-import type { NangoSync } from './<%= interfaceFileName %>';
+import type { NangoSync } from '../../<%= interfaceFileName %>';
 
 export default async function postConnection(nango: NangoSync): Promise<void> {
     // post connection logic goes here
