--- a/packages/cli/lib/templates/action.ejs
+++ b/packages/cli/lib/templates/action.ejs
@@ -1,8 +1,6 @@
-<%
-    let returnTypes = 'void';
-%>
+
 import type { NangoAction<%= modelNames ? ', ' + modelNames : '' %> } from '<%= interfacePath %><%= interfaceFileName %>';
 
-export default async function runAction(nango: NangoAction<%= input ? ', input: ' + input : ', input?: void' %>): Promise<<%= output %>> {
+export default async function runAction(nango: NangoAction<%= input ? ', input: ' + input : ', input?: void' %>): Promise<<%= output ? output : 'void' %>> {
     // Integration code goes here
 }
