--- a/packages/cli/lib/templates/action.ejs
+++ b/packages/cli/lib/templates/action.ejs
@@ -1,5 +1,5 @@
 import type { NangoAction<%= modelNames ? ', ' + modelNames : '' %> } from '<%= interfacePath %><%= interfaceFileName %>';
 
-export default async function runAction(nango: NangoAction<%= input ? ', input: ' + input : ', input?: void' %>): Promise<<%= output ? output : 'void' %>> {
+export default async function runAction(nango: NangoAction<%= input ? ', input: ' + input : ', _input?: void' %>): Promise<<%= output ? output : 'void' %>> {
     // Integration code goes here
 }
